--- a/gersis-angular/src/app/processo-java-list/processo-java-list.component.html
+++ b/gersis-angular/src/app/processo-java-list/processo-java-list.component.html
@@ -9,6 +9,9 @@
           <div class="dgc-card-header">
               <span class="dgc-link" routerLink="/processoJavaDetalhe/{{item.id}}">{{item.nomeClasseMain}}</span>
           </div>
+          <div class="dgc-card-detalhe" >
+            <span>SSH: {{item.fazSsh}}</span>
+          </div>
           <div class="dgc-card-detalhe">
             <span>{{item.jar}}</span>
           </div>
